# kursovaya_django_mailing

./: pyproject.toml
config/: settings.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_client_log_mailing_message_delete_customers_and_more.py  0002_rename_customers_customer.py  0003_alter_log_status.py  0003_message.py  0004_alter_log_status.py  0004_message_is_active.py  0005_alter_message_subject_sender.py  0006_remove_sender_customer_alter_sender_message_and_more.py  0007_remove_sender_customer_sender_customer.py  0008_remove_sender_customer_alter_sender_message_and_more.py  0009_remove_sender_completion_time.py  0010_log.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  customer_confirm_delete.html  customer_detail.html  customer_form.html  customer_list.html  index.html  log_list.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  navbar.html  sender_confirm_delete.html  sender_form.html  sender_list.html
mailing/templatetags/: my_tags.py
mailing_form/: apps.py
